parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> functions main_function
Rule 2     functions -> function functions
Rule 3     functions -> empty
Rule 4     function -> FUNCTION TYPE ID LPAREN parameters RPAREN block
Rule 5     parameters -> parameter COMMA parameters
Rule 6     parameters -> parameter
Rule 7     parameters -> empty
Rule 8     parameter -> TYPE ID
Rule 9     main_function -> MAIN LPAREN parameters RPAREN block
Rule 10    block -> LBRACE statements RBRACE
Rule 11    statements -> statement statements
Rule 12    statements -> empty
Rule 13    statement -> declaration_statement
Rule 14    statement -> assignment_statement
Rule 15    statement -> if_statement
Rule 16    statement -> loop_statement
Rule 17    statement -> break_statement
Rule 18    statement -> return_statement
Rule 19    statement -> print_statement
Rule 20    declaration_statement -> TYPE ID ASSIGN expression SEMI
Rule 21    assignment_statement -> ID ASSIGN expression SEMI
Rule 22    if_statement -> IF LPAREN expression RPAREN block else_statement
Rule 23    else_statement -> ELSE block
Rule 24    else_statement -> ELSE if_statement
Rule 25    else_statement -> empty
Rule 26    loop_statement -> LOOP block
Rule 27    break_statement -> BREAK SEMI
Rule 28    return_statement -> RETURN expression SEMI
Rule 29    print_statement -> PRINT LPAREN expression RPAREN SEMI
Rule 30    expression -> expression PLUS expression
Rule 31    expression -> expression MINUS expression
Rule 32    expression -> expression TIMES expression
Rule 33    expression -> expression DIVIDE expression
Rule 34    expression -> expression MOD expression
Rule 35    expression -> expression GT expression
Rule 36    expression -> expression LT expression
Rule 37    expression -> expression EQ expression
Rule 38    expression -> expression NE expression
Rule 39    expression -> expression LE expression
Rule 40    expression -> expression GE expression
Rule 41    expression -> expression AND expression
Rule 42    expression -> expression OR expression
Rule 43    expression -> NOT expression
Rule 44    expression -> LPAREN expression RPAREN
Rule 45    expression -> ID LPAREN arguments RPAREN
Rule 46    expression -> ID
Rule 47    expression -> INT
Rule 48    expression -> FLOAT
Rule 49    expression -> STRING
Rule 50    expression -> BOOL
Rule 51    arguments -> argument COMMA arguments
Rule 52    arguments -> argument
Rule 53    arguments -> empty
Rule 54    argument -> ID LPAREN arguments RPAREN
Rule 55    argument -> ID
Rule 56    argument -> INT
Rule 57    argument -> FLOAT
Rule 58    argument -> STRING
Rule 59    argument -> BOOL
Rule 60    empty -> <empty>

Terminals, with rules where they appear

AND                  : 41
ASSIGN               : 20 21
BOOL                 : 50 59
BREAK                : 27
COMMA                : 5 51
DIVIDE               : 33
ELSE                 : 23 24
EQ                   : 37
FLOAT                : 48 57
FUNCTION             : 4
GE                   : 40
GT                   : 35
ID                   : 4 8 20 21 45 46 54 55
IF                   : 22
INT                  : 47 56
LBRACE               : 10
LE                   : 39
LOOP                 : 26
LPAREN               : 4 9 22 29 44 45 54
LT                   : 36
MAIN                 : 9
MINUS                : 31
MOD                  : 34
NE                   : 38
NOT                  : 43
OR                   : 42
PLUS                 : 30
PRINT                : 29
RBRACE               : 10
RETURN               : 28
RPAREN               : 4 9 22 29 44 45 54
SEMI                 : 20 21 27 28 29
STRING               : 49 58
TIMES                : 32
TYPE                 : 4 8 20
error                : 

Nonterminals, with rules where they appear

argument             : 51 52
arguments            : 45 51 54
assignment_statement : 14
block                : 4 9 22 23 26
break_statement      : 17
declaration_statement : 13
else_statement       : 22
empty                : 3 7 12 25 53
expression           : 20 21 22 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44
function             : 2
functions            : 1 2
if_statement         : 15 24
loop_statement       : 16
main_function        : 1
parameter            : 5 6
parameters           : 4 5 9
print_statement      : 19
program              : 0
return_statement     : 18
statement            : 11
statements           : 10 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . functions main_function
    (2) functions -> . function functions
    (3) functions -> . empty
    (4) function -> . FUNCTION TYPE ID LPAREN parameters RPAREN block
    (60) empty -> .

    FUNCTION        shift and go to state 5
    MAIN            reduce using rule 60 (empty -> .)

    program                        shift and go to state 1
    functions                      shift and go to state 2
    function                       shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> functions . main_function
    (9) main_function -> . MAIN LPAREN parameters RPAREN block

    MAIN            shift and go to state 7

    main_function                  shift and go to state 6

state 3

    (2) functions -> function . functions
    (2) functions -> . function functions
    (3) functions -> . empty
    (4) function -> . FUNCTION TYPE ID LPAREN parameters RPAREN block
    (60) empty -> .

    FUNCTION        shift and go to state 5
    MAIN            reduce using rule 60 (empty -> .)

    function                       shift and go to state 3
    functions                      shift and go to state 8
    empty                          shift and go to state 4

state 4

    (3) functions -> empty .

    MAIN            reduce using rule 3 (functions -> empty .)


state 5

    (4) function -> FUNCTION . TYPE ID LPAREN parameters RPAREN block

    TYPE            shift and go to state 9


state 6

    (1) program -> functions main_function .

    $end            reduce using rule 1 (program -> functions main_function .)


state 7

    (9) main_function -> MAIN . LPAREN parameters RPAREN block

    LPAREN          shift and go to state 10


state 8

    (2) functions -> function functions .

    MAIN            reduce using rule 2 (functions -> function functions .)


state 9

    (4) function -> FUNCTION TYPE . ID LPAREN parameters RPAREN block

    ID              shift and go to state 11


state 10

    (9) main_function -> MAIN LPAREN . parameters RPAREN block
    (5) parameters -> . parameter COMMA parameters
    (6) parameters -> . parameter
    (7) parameters -> . empty
    (8) parameter -> . TYPE ID
    (60) empty -> .

    TYPE            shift and go to state 15
    RPAREN          reduce using rule 60 (empty -> .)

    parameters                     shift and go to state 12
    parameter                      shift and go to state 13
    empty                          shift and go to state 14

state 11

    (4) function -> FUNCTION TYPE ID . LPAREN parameters RPAREN block

    LPAREN          shift and go to state 16


state 12

    (9) main_function -> MAIN LPAREN parameters . RPAREN block

    RPAREN          shift and go to state 17


state 13

    (5) parameters -> parameter . COMMA parameters
    (6) parameters -> parameter .

    COMMA           shift and go to state 18
    RPAREN          reduce using rule 6 (parameters -> parameter .)


state 14

    (7) parameters -> empty .

    RPAREN          reduce using rule 7 (parameters -> empty .)


state 15

    (8) parameter -> TYPE . ID

    ID              shift and go to state 19


state 16

    (4) function -> FUNCTION TYPE ID LPAREN . parameters RPAREN block
    (5) parameters -> . parameter COMMA parameters
    (6) parameters -> . parameter
    (7) parameters -> . empty
    (8) parameter -> . TYPE ID
    (60) empty -> .

    TYPE            shift and go to state 15
    RPAREN          reduce using rule 60 (empty -> .)

    parameters                     shift and go to state 20
    parameter                      shift and go to state 13
    empty                          shift and go to state 14

state 17

    (9) main_function -> MAIN LPAREN parameters RPAREN . block
    (10) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 22

    block                          shift and go to state 21

state 18

    (5) parameters -> parameter COMMA . parameters
    (5) parameters -> . parameter COMMA parameters
    (6) parameters -> . parameter
    (7) parameters -> . empty
    (8) parameter -> . TYPE ID
    (60) empty -> .

    TYPE            shift and go to state 15
    RPAREN          reduce using rule 60 (empty -> .)

    parameter                      shift and go to state 13
    parameters                     shift and go to state 23
    empty                          shift and go to state 14

state 19

    (8) parameter -> TYPE ID .

    COMMA           reduce using rule 8 (parameter -> TYPE ID .)
    RPAREN          reduce using rule 8 (parameter -> TYPE ID .)


state 20

    (4) function -> FUNCTION TYPE ID LPAREN parameters . RPAREN block

    RPAREN          shift and go to state 24


state 21

    (9) main_function -> MAIN LPAREN parameters RPAREN block .

    $end            reduce using rule 9 (main_function -> MAIN LPAREN parameters RPAREN block .)


state 22

    (10) block -> LBRACE . statements RBRACE
    (11) statements -> . statement statements
    (12) statements -> . empty
    (13) statement -> . declaration_statement
    (14) statement -> . assignment_statement
    (15) statement -> . if_statement
    (16) statement -> . loop_statement
    (17) statement -> . break_statement
    (18) statement -> . return_statement
    (19) statement -> . print_statement
    (60) empty -> .
    (20) declaration_statement -> . TYPE ID ASSIGN expression SEMI
    (21) assignment_statement -> . ID ASSIGN expression SEMI
    (22) if_statement -> . IF LPAREN expression RPAREN block else_statement
    (26) loop_statement -> . LOOP block
    (27) break_statement -> . BREAK SEMI
    (28) return_statement -> . RETURN expression SEMI
    (29) print_statement -> . PRINT LPAREN expression RPAREN SEMI

    RBRACE          reduce using rule 60 (empty -> .)
    TYPE            shift and go to state 35
    ID              shift and go to state 36
    IF              shift and go to state 37
    LOOP            shift and go to state 38
    BREAK           shift and go to state 39
    RETURN          shift and go to state 40
    PRINT           shift and go to state 41

    statements                     shift and go to state 25
    statement                      shift and go to state 26
    empty                          shift and go to state 27
    declaration_statement          shift and go to state 28
    assignment_statement           shift and go to state 29
    if_statement                   shift and go to state 30
    loop_statement                 shift and go to state 31
    break_statement                shift and go to state 32
    return_statement               shift and go to state 33
    print_statement                shift and go to state 34

state 23

    (5) parameters -> parameter COMMA parameters .

    RPAREN          reduce using rule 5 (parameters -> parameter COMMA parameters .)


state 24

    (4) function -> FUNCTION TYPE ID LPAREN parameters RPAREN . block
    (10) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 22

    block                          shift and go to state 42

state 25

    (10) block -> LBRACE statements . RBRACE

    RBRACE          shift and go to state 43


state 26

    (11) statements -> statement . statements
    (11) statements -> . statement statements
    (12) statements -> . empty
    (13) statement -> . declaration_statement
    (14) statement -> . assignment_statement
    (15) statement -> . if_statement
    (16) statement -> . loop_statement
    (17) statement -> . break_statement
    (18) statement -> . return_statement
    (19) statement -> . print_statement
    (60) empty -> .
    (20) declaration_statement -> . TYPE ID ASSIGN expression SEMI
    (21) assignment_statement -> . ID ASSIGN expression SEMI
    (22) if_statement -> . IF LPAREN expression RPAREN block else_statement
    (26) loop_statement -> . LOOP block
    (27) break_statement -> . BREAK SEMI
    (28) return_statement -> . RETURN expression SEMI
    (29) print_statement -> . PRINT LPAREN expression RPAREN SEMI

    RBRACE          reduce using rule 60 (empty -> .)
    TYPE            shift and go to state 35
    ID              shift and go to state 36
    IF              shift and go to state 37
    LOOP            shift and go to state 38
    BREAK           shift and go to state 39
    RETURN          shift and go to state 40
    PRINT           shift and go to state 41

    statement                      shift and go to state 26
    statements                     shift and go to state 44
    empty                          shift and go to state 27
    declaration_statement          shift and go to state 28
    assignment_statement           shift and go to state 29
    if_statement                   shift and go to state 30
    loop_statement                 shift and go to state 31
    break_statement                shift and go to state 32
    return_statement               shift and go to state 33
    print_statement                shift and go to state 34

state 27

    (12) statements -> empty .

    RBRACE          reduce using rule 12 (statements -> empty .)


state 28

    (13) statement -> declaration_statement .

    TYPE            reduce using rule 13 (statement -> declaration_statement .)
    ID              reduce using rule 13 (statement -> declaration_statement .)
    IF              reduce using rule 13 (statement -> declaration_statement .)
    LOOP            reduce using rule 13 (statement -> declaration_statement .)
    BREAK           reduce using rule 13 (statement -> declaration_statement .)
    RETURN          reduce using rule 13 (statement -> declaration_statement .)
    PRINT           reduce using rule 13 (statement -> declaration_statement .)
    RBRACE          reduce using rule 13 (statement -> declaration_statement .)


state 29

    (14) statement -> assignment_statement .

    TYPE            reduce using rule 14 (statement -> assignment_statement .)
    ID              reduce using rule 14 (statement -> assignment_statement .)
    IF              reduce using rule 14 (statement -> assignment_statement .)
    LOOP            reduce using rule 14 (statement -> assignment_statement .)
    BREAK           reduce using rule 14 (statement -> assignment_statement .)
    RETURN          reduce using rule 14 (statement -> assignment_statement .)
    PRINT           reduce using rule 14 (statement -> assignment_statement .)
    RBRACE          reduce using rule 14 (statement -> assignment_statement .)


state 30

    (15) statement -> if_statement .

    TYPE            reduce using rule 15 (statement -> if_statement .)
    ID              reduce using rule 15 (statement -> if_statement .)
    IF              reduce using rule 15 (statement -> if_statement .)
    LOOP            reduce using rule 15 (statement -> if_statement .)
    BREAK           reduce using rule 15 (statement -> if_statement .)
    RETURN          reduce using rule 15 (statement -> if_statement .)
    PRINT           reduce using rule 15 (statement -> if_statement .)
    RBRACE          reduce using rule 15 (statement -> if_statement .)


state 31

    (16) statement -> loop_statement .

    TYPE            reduce using rule 16 (statement -> loop_statement .)
    ID              reduce using rule 16 (statement -> loop_statement .)
    IF              reduce using rule 16 (statement -> loop_statement .)
    LOOP            reduce using rule 16 (statement -> loop_statement .)
    BREAK           reduce using rule 16 (statement -> loop_statement .)
    RETURN          reduce using rule 16 (statement -> loop_statement .)
    PRINT           reduce using rule 16 (statement -> loop_statement .)
    RBRACE          reduce using rule 16 (statement -> loop_statement .)


state 32

    (17) statement -> break_statement .

    TYPE            reduce using rule 17 (statement -> break_statement .)
    ID              reduce using rule 17 (statement -> break_statement .)
    IF              reduce using rule 17 (statement -> break_statement .)
    LOOP            reduce using rule 17 (statement -> break_statement .)
    BREAK           reduce using rule 17 (statement -> break_statement .)
    RETURN          reduce using rule 17 (statement -> break_statement .)
    PRINT           reduce using rule 17 (statement -> break_statement .)
    RBRACE          reduce using rule 17 (statement -> break_statement .)


state 33

    (18) statement -> return_statement .

    TYPE            reduce using rule 18 (statement -> return_statement .)
    ID              reduce using rule 18 (statement -> return_statement .)
    IF              reduce using rule 18 (statement -> return_statement .)
    LOOP            reduce using rule 18 (statement -> return_statement .)
    BREAK           reduce using rule 18 (statement -> return_statement .)
    RETURN          reduce using rule 18 (statement -> return_statement .)
    PRINT           reduce using rule 18 (statement -> return_statement .)
    RBRACE          reduce using rule 18 (statement -> return_statement .)


state 34

    (19) statement -> print_statement .

    TYPE            reduce using rule 19 (statement -> print_statement .)
    ID              reduce using rule 19 (statement -> print_statement .)
    IF              reduce using rule 19 (statement -> print_statement .)
    LOOP            reduce using rule 19 (statement -> print_statement .)
    BREAK           reduce using rule 19 (statement -> print_statement .)
    RETURN          reduce using rule 19 (statement -> print_statement .)
    PRINT           reduce using rule 19 (statement -> print_statement .)
    RBRACE          reduce using rule 19 (statement -> print_statement .)


state 35

    (20) declaration_statement -> TYPE . ID ASSIGN expression SEMI

    ID              shift and go to state 45


state 36

    (21) assignment_statement -> ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 46


state 37

    (22) if_statement -> IF . LPAREN expression RPAREN block else_statement

    LPAREN          shift and go to state 47


state 38

    (26) loop_statement -> LOOP . block
    (10) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 22

    block                          shift and go to state 48

state 39

    (27) break_statement -> BREAK . SEMI

    SEMI            shift and go to state 49


state 40

    (28) return_statement -> RETURN . expression SEMI
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MOD expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression LE expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . ID LPAREN arguments RPAREN
    (46) expression -> . ID
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . BOOL

    NOT             shift and go to state 51
    LPAREN          shift and go to state 52
    ID              shift and go to state 53
    INT             shift and go to state 54
    FLOAT           shift and go to state 55
    STRING          shift and go to state 56
    BOOL            shift and go to state 57

    expression                     shift and go to state 50

state 41

    (29) print_statement -> PRINT . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 58


state 42

    (4) function -> FUNCTION TYPE ID LPAREN parameters RPAREN block .

    FUNCTION        reduce using rule 4 (function -> FUNCTION TYPE ID LPAREN parameters RPAREN block .)
    MAIN            reduce using rule 4 (function -> FUNCTION TYPE ID LPAREN parameters RPAREN block .)


state 43

    (10) block -> LBRACE statements RBRACE .

    $end            reduce using rule 10 (block -> LBRACE statements RBRACE .)
    FUNCTION        reduce using rule 10 (block -> LBRACE statements RBRACE .)
    MAIN            reduce using rule 10 (block -> LBRACE statements RBRACE .)
    TYPE            reduce using rule 10 (block -> LBRACE statements RBRACE .)
    ID              reduce using rule 10 (block -> LBRACE statements RBRACE .)
    IF              reduce using rule 10 (block -> LBRACE statements RBRACE .)
    LOOP            reduce using rule 10 (block -> LBRACE statements RBRACE .)
    BREAK           reduce using rule 10 (block -> LBRACE statements RBRACE .)
    RETURN          reduce using rule 10 (block -> LBRACE statements RBRACE .)
    PRINT           reduce using rule 10 (block -> LBRACE statements RBRACE .)
    RBRACE          reduce using rule 10 (block -> LBRACE statements RBRACE .)
    ELSE            reduce using rule 10 (block -> LBRACE statements RBRACE .)


state 44

    (11) statements -> statement statements .

    RBRACE          reduce using rule 11 (statements -> statement statements .)


state 45

    (20) declaration_statement -> TYPE ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 59


state 46

    (21) assignment_statement -> ID ASSIGN . expression SEMI
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MOD expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression LE expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . ID LPAREN arguments RPAREN
    (46) expression -> . ID
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . BOOL

    NOT             shift and go to state 51
    LPAREN          shift and go to state 52
    ID              shift and go to state 53
    INT             shift and go to state 54
    FLOAT           shift and go to state 55
    STRING          shift and go to state 56
    BOOL            shift and go to state 57

    expression                     shift and go to state 60

state 47

    (22) if_statement -> IF LPAREN . expression RPAREN block else_statement
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MOD expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression LE expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . ID LPAREN arguments RPAREN
    (46) expression -> . ID
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . BOOL

    NOT             shift and go to state 51
    LPAREN          shift and go to state 52
    ID              shift and go to state 53
    INT             shift and go to state 54
    FLOAT           shift and go to state 55
    STRING          shift and go to state 56
    BOOL            shift and go to state 57

    expression                     shift and go to state 61

state 48

    (26) loop_statement -> LOOP block .

    TYPE            reduce using rule 26 (loop_statement -> LOOP block .)
    ID              reduce using rule 26 (loop_statement -> LOOP block .)
    IF              reduce using rule 26 (loop_statement -> LOOP block .)
    LOOP            reduce using rule 26 (loop_statement -> LOOP block .)
    BREAK           reduce using rule 26 (loop_statement -> LOOP block .)
    RETURN          reduce using rule 26 (loop_statement -> LOOP block .)
    PRINT           reduce using rule 26 (loop_statement -> LOOP block .)
    RBRACE          reduce using rule 26 (loop_statement -> LOOP block .)


state 49

    (27) break_statement -> BREAK SEMI .

    TYPE            reduce using rule 27 (break_statement -> BREAK SEMI .)
    ID              reduce using rule 27 (break_statement -> BREAK SEMI .)
    IF              reduce using rule 27 (break_statement -> BREAK SEMI .)
    LOOP            reduce using rule 27 (break_statement -> BREAK SEMI .)
    BREAK           reduce using rule 27 (break_statement -> BREAK SEMI .)
    RETURN          reduce using rule 27 (break_statement -> BREAK SEMI .)
    PRINT           reduce using rule 27 (break_statement -> BREAK SEMI .)
    RBRACE          reduce using rule 27 (break_statement -> BREAK SEMI .)


state 50

    (28) return_statement -> RETURN expression . SEMI
    (30) expression -> expression . PLUS expression
    (31) expression -> expression . MINUS expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . DIVIDE expression
    (34) expression -> expression . MOD expression
    (35) expression -> expression . GT expression
    (36) expression -> expression . LT expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . LE expression
    (40) expression -> expression . GE expression
    (41) expression -> expression . AND expression
    (42) expression -> expression . OR expression

    SEMI            shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 66
    MOD             shift and go to state 67
    GT              shift and go to state 68
    LT              shift and go to state 69
    EQ              shift and go to state 70
    NE              shift and go to state 71
    LE              shift and go to state 72
    GE              shift and go to state 73
    AND             shift and go to state 74
    OR              shift and go to state 75


state 51

    (43) expression -> NOT . expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MOD expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression LE expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . ID LPAREN arguments RPAREN
    (46) expression -> . ID
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . BOOL

    NOT             shift and go to state 51
    LPAREN          shift and go to state 52
    ID              shift and go to state 53
    INT             shift and go to state 54
    FLOAT           shift and go to state 55
    STRING          shift and go to state 56
    BOOL            shift and go to state 57

    expression                     shift and go to state 76

state 52

    (44) expression -> LPAREN . expression RPAREN
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MOD expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression LE expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . ID LPAREN arguments RPAREN
    (46) expression -> . ID
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . BOOL

    NOT             shift and go to state 51
    LPAREN          shift and go to state 52
    ID              shift and go to state 53
    INT             shift and go to state 54
    FLOAT           shift and go to state 55
    STRING          shift and go to state 56
    BOOL            shift and go to state 57

    expression                     shift and go to state 77

state 53

    (45) expression -> ID . LPAREN arguments RPAREN
    (46) expression -> ID .

    LPAREN          shift and go to state 78
    SEMI            reduce using rule 46 (expression -> ID .)
    PLUS            reduce using rule 46 (expression -> ID .)
    MINUS           reduce using rule 46 (expression -> ID .)
    TIMES           reduce using rule 46 (expression -> ID .)
    DIVIDE          reduce using rule 46 (expression -> ID .)
    MOD             reduce using rule 46 (expression -> ID .)
    GT              reduce using rule 46 (expression -> ID .)
    LT              reduce using rule 46 (expression -> ID .)
    EQ              reduce using rule 46 (expression -> ID .)
    NE              reduce using rule 46 (expression -> ID .)
    LE              reduce using rule 46 (expression -> ID .)
    GE              reduce using rule 46 (expression -> ID .)
    AND             reduce using rule 46 (expression -> ID .)
    OR              reduce using rule 46 (expression -> ID .)
    RPAREN          reduce using rule 46 (expression -> ID .)


state 54

    (47) expression -> INT .

    SEMI            reduce using rule 47 (expression -> INT .)
    PLUS            reduce using rule 47 (expression -> INT .)
    MINUS           reduce using rule 47 (expression -> INT .)
    TIMES           reduce using rule 47 (expression -> INT .)
    DIVIDE          reduce using rule 47 (expression -> INT .)
    MOD             reduce using rule 47 (expression -> INT .)
    GT              reduce using rule 47 (expression -> INT .)
    LT              reduce using rule 47 (expression -> INT .)
    EQ              reduce using rule 47 (expression -> INT .)
    NE              reduce using rule 47 (expression -> INT .)
    LE              reduce using rule 47 (expression -> INT .)
    GE              reduce using rule 47 (expression -> INT .)
    AND             reduce using rule 47 (expression -> INT .)
    OR              reduce using rule 47 (expression -> INT .)
    RPAREN          reduce using rule 47 (expression -> INT .)


state 55

    (48) expression -> FLOAT .

    SEMI            reduce using rule 48 (expression -> FLOAT .)
    PLUS            reduce using rule 48 (expression -> FLOAT .)
    MINUS           reduce using rule 48 (expression -> FLOAT .)
    TIMES           reduce using rule 48 (expression -> FLOAT .)
    DIVIDE          reduce using rule 48 (expression -> FLOAT .)
    MOD             reduce using rule 48 (expression -> FLOAT .)
    GT              reduce using rule 48 (expression -> FLOAT .)
    LT              reduce using rule 48 (expression -> FLOAT .)
    EQ              reduce using rule 48 (expression -> FLOAT .)
    NE              reduce using rule 48 (expression -> FLOAT .)
    LE              reduce using rule 48 (expression -> FLOAT .)
    GE              reduce using rule 48 (expression -> FLOAT .)
    AND             reduce using rule 48 (expression -> FLOAT .)
    OR              reduce using rule 48 (expression -> FLOAT .)
    RPAREN          reduce using rule 48 (expression -> FLOAT .)


state 56

    (49) expression -> STRING .

    SEMI            reduce using rule 49 (expression -> STRING .)
    PLUS            reduce using rule 49 (expression -> STRING .)
    MINUS           reduce using rule 49 (expression -> STRING .)
    TIMES           reduce using rule 49 (expression -> STRING .)
    DIVIDE          reduce using rule 49 (expression -> STRING .)
    MOD             reduce using rule 49 (expression -> STRING .)
    GT              reduce using rule 49 (expression -> STRING .)
    LT              reduce using rule 49 (expression -> STRING .)
    EQ              reduce using rule 49 (expression -> STRING .)
    NE              reduce using rule 49 (expression -> STRING .)
    LE              reduce using rule 49 (expression -> STRING .)
    GE              reduce using rule 49 (expression -> STRING .)
    AND             reduce using rule 49 (expression -> STRING .)
    OR              reduce using rule 49 (expression -> STRING .)
    RPAREN          reduce using rule 49 (expression -> STRING .)


state 57

    (50) expression -> BOOL .

    SEMI            reduce using rule 50 (expression -> BOOL .)
    PLUS            reduce using rule 50 (expression -> BOOL .)
    MINUS           reduce using rule 50 (expression -> BOOL .)
    TIMES           reduce using rule 50 (expression -> BOOL .)
    DIVIDE          reduce using rule 50 (expression -> BOOL .)
    MOD             reduce using rule 50 (expression -> BOOL .)
    GT              reduce using rule 50 (expression -> BOOL .)
    LT              reduce using rule 50 (expression -> BOOL .)
    EQ              reduce using rule 50 (expression -> BOOL .)
    NE              reduce using rule 50 (expression -> BOOL .)
    LE              reduce using rule 50 (expression -> BOOL .)
    GE              reduce using rule 50 (expression -> BOOL .)
    AND             reduce using rule 50 (expression -> BOOL .)
    OR              reduce using rule 50 (expression -> BOOL .)
    RPAREN          reduce using rule 50 (expression -> BOOL .)


state 58

    (29) print_statement -> PRINT LPAREN . expression RPAREN SEMI
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MOD expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression LE expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . ID LPAREN arguments RPAREN
    (46) expression -> . ID
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . BOOL

    NOT             shift and go to state 51
    LPAREN          shift and go to state 52
    ID              shift and go to state 53
    INT             shift and go to state 54
    FLOAT           shift and go to state 55
    STRING          shift and go to state 56
    BOOL            shift and go to state 57

    expression                     shift and go to state 79

state 59

    (20) declaration_statement -> TYPE ID ASSIGN . expression SEMI
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MOD expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression LE expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . ID LPAREN arguments RPAREN
    (46) expression -> . ID
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . BOOL

    NOT             shift and go to state 51
    LPAREN          shift and go to state 52
    ID              shift and go to state 53
    INT             shift and go to state 54
    FLOAT           shift and go to state 55
    STRING          shift and go to state 56
    BOOL            shift and go to state 57

    expression                     shift and go to state 80

state 60

    (21) assignment_statement -> ID ASSIGN expression . SEMI
    (30) expression -> expression . PLUS expression
    (31) expression -> expression . MINUS expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . DIVIDE expression
    (34) expression -> expression . MOD expression
    (35) expression -> expression . GT expression
    (36) expression -> expression . LT expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . LE expression
    (40) expression -> expression . GE expression
    (41) expression -> expression . AND expression
    (42) expression -> expression . OR expression

    SEMI            shift and go to state 81
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 66
    MOD             shift and go to state 67
    GT              shift and go to state 68
    LT              shift and go to state 69
    EQ              shift and go to state 70
    NE              shift and go to state 71
    LE              shift and go to state 72
    GE              shift and go to state 73
    AND             shift and go to state 74
    OR              shift and go to state 75


state 61
